--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.burst": "1.4.3",
     "com.unity.collab-proxy": "1.2.16",
+    "com.unity.entities": "0.11.2-preview.1",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.physics": "0.4.1-preview",
